--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,7 +59,7 @@
                                 "  <header class=\"post-header\">\n" +
                                 "\n" +
                                 "\n" +
-                                " <h2 class=\"post-title\">" + jsonObject[item].header + "</h2>\n" +
+                                " <h2 class=\"post-title\">" + jsonObject[item].title + "</h2>\n" +
                                 "\n" +
                                 "<p class=\"post-meta\">\n" +
                                 "By <a class=\"post-author\" href=\"#\">" + jsonObject[item].name + "</a>\n" +
@@ -91,7 +91,7 @@
                         //make sure to serialize your JSON body
                         body: JSON.stringify({
                             name: document.getElementById("yourName").value,
-                            header: document.getElementById("header").value,
+                            title: document.getElementById("title").value,
                             body: document.getElementById("body").value
                         })
                     })
@@ -113,7 +113,7 @@
 <body>
     <div id="layout" class="pure-g">
         <div class="sidebar pure-u-1 pure-u-md-1-4">
-            <div class="header">
+            <div class="title">
                 <h1 class="brand-title">Blog site</h1>
                 <h2 class="brand-tagline">Creating a blog layout using Pure</h2>
                 <nav class="nav">
@@ -144,7 +144,7 @@
 
                         <fieldset class="pure-group" >
                             <input type="text" name="yourName" class="pure-input-1-2" placeholder="Your name" id="yourName">
-                            <input type="text" name="header" class="pure-input-1-2" placeholder="Blog post title" id="header">
+                            <input type="text" name="title" class="pure-input-1-2" placeholder="Blog post title" id="title">
                             <textarea class="pure-input-1-2" name="body" placeholder="Write your blog post here" id="body"></textarea>
                         </fieldset>
                        <button type="button" class="pure-button pure-input-1-2 pure-button-primary" value="click" id="sendB">Submit</button>
